<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight"
            app:cardBackgroundColor="@color/color1"
            app:cardCornerRadius="@dimen/eight">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/eight"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight"
                    android:text="@string/details"
                    android:textColor="@color/green1" />

                <TextView
                    android:id="@+id/emailTextV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/nameTextV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:background="@color/grey_two" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/eight"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginBottom="@dimen/sixty"
            app:cardBackgroundColor="@color/color1"
            app:cardCornerRadius="@dimen/eight">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/homeListRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/eight" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/dBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight"
            android:layout_weight="1"
            android:text="@string/donate" />

        <Button
            android:id="@+id/rBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight"
            android:layout_weight="1"
            android:text="@string/raise_a_request" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>